Extend Version, upgrade to rust master.
* Split the upstream version and the debian revision into numeric
  and non-numeric parts to ease later comparison.
* Add a skeleton for the actual version comparison. Add another
  test for comparisons.
* Cleanup all uses of as_slice.
* Eliminate all warnings, rename enum ST's values.
* Update crates.io dependencies.
* Drop the dependency on email, for now. Add tempdir.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ version comparison, changelog or control file parsing.
 
 [dependencies]
 chrono = "*"
-email = "*"
+#email = "*"
 log = "*"
 time = "0.1"
+tempdir = "*"
 
 [lib]
 name = "debian"
