--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: rust
 rust:
   - beta
   - stable
+before_script:
+  - rustup component add clippy-preview
+script:
+  - cargo clippy --verbose --all-targets --all-features -- -D warnings
+  - cargo test --verbose
