--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,19 @@ interacting with apt.
 repository = "https://github.com/mwanner/rust-debian"
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4" }
 log = "0.4"
 time = "0.3"
 tempfile = "3"
+serde = { version = "1.0.147", optional = true, features = [ "derive" ]}
+
+[features]
+default = ["serde_support"]
+serde_support = ["chrono/serde", "serde" ]
 
 [lib]
 name = "debian"
 path = "src/lib.rs"
+
+[dev-dependencies]
+serde_json = "1.0.89"
