--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,9 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+
+      - name: Run cargo test feature serde
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -F serde_support
