Add more GitHub actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,35 +1,89 @@
+name: Test
+
 on: [push, pull_request]
 
-name: Test
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   test:
-    name: Test Suite
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust:
+          - nightly
+          - stable
+          # first release with cargo dep: syntax
+          - 1.60.0
+
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Install stable toolchain
+      - name: Cache cargo registry
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install toolchain
         uses: actions-rs/toolchain@v1
         with:
-          profile: default
-          toolchain: stable
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
           override: true
 
-      - name: Run cargo test
+      - name: Build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --workspace --verbose --all-features
+
+      - name: Run tests
         uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --workspace --verbose --all-features
+        env:
+          RUST_BACKTRACE: 1
 
-      - name: Run cargo test feature serde
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Cache cargo registry
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
+
+      - name: Check format
         uses: actions-rs/cargo@v1
         with:
-          command: test
-          args: -F serde
+          command: fmt
+          args: --all --check
 
-      - name: Run cargo clippy
-        uses: actions-rs/clippy-check@v1
+      - name: Run clippy
+        uses: actions-rs/cargo@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: -F serde
+          command: clippy
+          args: -- -D warnings
