Correct version comparison, reduce partial_cmd to simply use cmp.
Minor additional edits: Use edition 2021, use write_all to avoid
having to handle partial writes, update to MSRV 1.67.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ control files for packaging, comparing versions (the Debian way) or
 interacting with apt.
 """
 repository = "https://github.com/mwanner/rust-debian"
-rust-version = "1.60"
+rust-version = "1.67"
+edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4" }
